--- a/notes/week01/week01.ipynb
+++ b/notes/week01/week01.ipynb
@@ -2,20 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Week 1: 2018/01/17-19"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# About these notes\n",
     "\n",
@@ -24,10 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Tuesday reading\n",
     "\n",
@@ -68,10 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Restricted computation\n",
     "\n",
@@ -80,10 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Tractable and intractable\n",
     "\n",
@@ -92,10 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Wednesday reading\n",
     "\n",
@@ -104,24 +86,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# Thursday class\n",
     "\n",
-    "In this course we want to study all the things that a computer can do. That seems very diverse, and it would seem that we have to study many different kinds of computations separately. But maybe we can reduce them all to one kind of problem, and focus our study on that one kind of problem. And we claim that any computational problem can be reduced to problems of the form: Does string $w$ belong to language $L$?\n",
+    "In this course we want to study all the things that a computer can do. But there are so many kinds of things that computers can do, and it would seem that we have to study each kind separately. But maybe we can reduce them all to one kind of problem, and focus our study on that one kind of problem. Namely, we want to treat every kind of object as a **string of symbols** (e.g., bits), and we want to treat every kind of computational problem as a **yes/no question about strings**.\n",
     "\n",
     "People are fairly comfortable these days with the idea that any kind of object we might want to compute about can be represented as a string. We deal every day with messages, music, pictures, movies, books, etc., in digital form, with the awareness that these are just strings of 0’s and 1’s.\n",
     "\n",
-    "Less obvious, perhaps, is that it makes sense to reduce all kinds of computations down to questions about whether strings belong to languages. First of all, our experience with computers today is highly interactive. But user-computer interaction can be thought of as a sequence of inputs and outputs. Second, the output from a computer is much more than just a \"yes\" or \"no\" answer. But if you have any function $f(x)$ that takes an input $x$ and outputs another string, we can think of it as the related function $f'(x,y)$ that takes an input $x$ and a possible output $y$, and returns \"yes\" iff $f(x) = y$.\n",
+    "Less obvious, perhaps, is that it makes sense to reduce all kinds of computations down to yes/no questions about strings. For one, our experience with computers today is highly interactive. But user-computer interaction can be thought of as a sequence of inputs and outputs. Second, the output from a computer is much more than just a \"yes\" or \"no\" answer. But if you have any function $f(x)$ that takes an input $x$ and outputs another string, we can think of it as the related function $f'(x,y)$ that takes an input $x$ and a possible output $y$, and returns \"yes\" iff $f(x) = y$. Then you would use $f'$ by calling it on _all possible_ outputs $y$ until you found one such that $f'(x, y)$ is \"yes\".\n",
     "\n",
-    "Caveat: The function $f'$ might be *much slower* than the original $f$. This will matter when we get to Unit IV, and we'll deal with this issue when the time comes.\n",
+    "Caveat: Using $f'$ in this way might be *much slower* than calling the original $f$. This will matter when we get to Unit IV, and we'll deal with this issue when the time comes.\n",
     "\n",
     "## Strings\n",
     "\n",
-    "An _alphabet_ is a nonempty finite set of _symbols_. We use $\\Sigma$ (uppercase sigma) or sometimes $\\Gamma$ (uppercase gamma) to stand for an alphabet. We write actual symbols as $\\texttt{a}, \\texttt{b},$ etc., but write variables standing for symbols as $a, b$, etc.\n",
+    "An _alphabet_ is a nonempty finite set of _symbols_. We use $\\Sigma$ (uppercase sigma) or sometimes $\\Gamma$ (uppercase gamma) to stand for an alphabet. We write actual symbols in typewriter font, like $\\texttt{a}, \\texttt{b},$ etc., but write variables standing for symbols in italics, like $a, b$, etc.\n",
     "\n",
     "A _string_ is a finite sequence of symbols. Unlike with sets, order matters and duplicates matter. We usually use $w$ for a variable that stands for a string and $u,v$ or $x,y,z$ when we need more variables. \n",
     "\n",
@@ -132,7 +111,7 @@
     "\n",
     "Note that $\\varepsilon$ (epsilon) is not a symbol! It is a \"meta-symbol\" that stands for the empty string. (Also, it is more commonly written $\\epsilon$, but we'll try to stick to the book's style.)\n",
     "\n",
-    "It might be helpful to compare this notation for strings with C++. A symbol is a `char`. Just like a constant `'a'` and a variable `a` are not the same in C++, so in math, the symbol $\\mathtt{a}$ and the variable $a$ are not the same. A string is a C++ `string`. In C++, the constants `'a'` and `\"a\"` are different; in math (and in Python), they are identical. In C++, the empty string is `\"\"`; in math, $\\varepsilon$. In C++, you concatenate strings with `v+w`; in math, we write $v\\circ w$ or $vw$.\n",
+    "It might be helpful to compare this notation for strings with C++. A symbol is a `char`. Just like a constant `'a'` and a variable `a` are not the same in C++, so in math, the symbol $\\mathtt{a}$ and the variable $a$ are not the same. A string is a C++ `string`. In C++, the constants `'a'` and `\"a\"` are different; in math (and in Python), they are the same. In C++, the empty string is `\"\"`; in math, $\\varepsilon$. In C++, you concatenate strings with `v+w`; in math, we write $v\\circ w$ or $vw$.\n",
     "\n",
     "**Question.** (This question and all questions below are not for credit; they will be discussed in class.) True or false? Assume $\\Sigma = \\{\\mathtt{a},\\mathtt{b}\\}$.\n",
     "\n",
@@ -145,7 +124,7 @@
     "\n",
     "## Languages\n",
     "\n",
-    "A set of strings is called a _language_. We write $\\Sigma^\\ast$ for the language of all strings over $\\Sigma$. As usual, $\\emptyset$ stands for the empty language.\n",
+    "A set of strings is called a _language_. We write $\\Sigma^\\ast$ (\"sigma star\") for the language of all strings over $\\Sigma$. As usual, $\\emptyset$ stands for the empty language.\n",
     "\n",
     "**Question.** True or false?\n",
     "\n",
@@ -172,53 +151,56 @@
     "L \\circ L' = L L' &= \\{ w w' \\mid w \\in L, w' \\in L'\\}.\n",
     "\\end{align}\n",
     "\n",
+    "For example, if $L = \\{\\texttt{a}, \\texttt{b}\\}$ and $L' = \\{\\texttt{c}, \\texttt{d}\\}$, then $L \\circ L' = \\{\\texttt{ac}, \\texttt{ad}, \\texttt{bc}, \\texttt{bd}\\}$.\n",
+    "\n",
+    "**Question.** According to the above definition, what is\n",
+    "\n",
+    "- $\\emptyset \\circ \\{\\texttt{a}\\}$\n",
+    "- $\\varepsilon \\circ \\{\\texttt{a}\\}$\n",
+    "\n",
     "The $\\ast$ operator that we saw above, known as the Kleene star, can be applied to any language. Thus $L^\\ast$ is defined as the smallest language such that:\n",
     "\n",
     "- $L \\subseteq L^\\ast$.\n",
     "- If $v \\in L^\\ast$ and $w \\in L^\\ast$, then $vw \\in L^\\ast$.\n",
     "- $\\varepsilon \\in L^\\ast$.\n",
     "\n",
+    "For example, if $L = \\{\\texttt{aa}, \\texttt{bb}\\}$, then $L^\\ast = \\{\\varepsilon, \\texttt{aa}, \\texttt{bb}, \\texttt{aaaa}, \\texttt{aabb}, \\texttt{bbaa}, \\texttt{bbbb}, \\texttt{aaaaaa}, \\ldots\\}$.\n",
+    "\n",
+    "**Question.** According to the above definition, what is $\\emptyset^\\ast$?\n",
+    "\n",
+    "Above, we said that we treat every computational problem as a yes/no question about strings. Another way of saying this is that we treat every computational problem as a language (does string $w$ belong to language $L$?). For example, the problem of testing whether a number is prime could be treated as the language $\\{w \\in \\{\\texttt{0}, \\ldots, \\texttt{9}\\}^\\ast \\mid \\text{the number with decimal representation $w$ is prime}\\}$.\n",
+    "\n",
+    "\n",
     "## Language classes\n",
     "\n",
-    "Since every language corresponds to a computational problem (given a string $w$, does $w$ belong to $L$?), and since some problems are harder than others, it follows that some languages are harder to recognize than others. Some languages can be recognized by a Turing machine and some can't. Some can be recognized by a Turing machine in polynomial time ($O(n^k)$ time for some $k$) and some can't. So we can talk about sets of languages, commonly called _language classes_.\n",
+    "Since some problems are harder than others, it follows that some languages are harder to recognize than others. Some languages can be recognized by a Turing machine and some can't. Some can be recognized by a Turing machine in polynomial time ($O(n^k)$ time for some $k$) and some can't. So we can talk about sets of languages, commonly called _language classes_.\n",
     "\n",
     "There are only a handful of language classes we will learn this semester. They are:\n",
     "![Overview of language classes](overview.pdf)\n",
     "Each of the six boxes is a language class, with the name of the class written above; inside each box are kinds of machines that accept that language class.\n",
     "Each class is a strict superset of the previous one, _except_ NP is not known to be a strict superset of P."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
