--- a/notes/week02/week02.ipynb
+++ b/notes/week02/week02.ipynb
@@ -972,6 +972,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## A note on the letter _q_\n",
+    "\n",
+    "We use the letter $q$ to stand for states. This usage goes back to Turing and I wish I knew why he chose this letter. But more importantly, there's some fuzziness in the way that this letter is used that I need to call attention to.\n",
+    "\n",
+    "With alphabet symbols, the book makes a careful distinction between `a`, a particular symbol, and $a$, a variable standing for a symbol.\n",
+    "\n",
+    "With state, the book is not so careful. Particular states are almost always given names $q_1, q_2,$ etc., and occasionally $q_0$ or $q_{\\text{whatever}}$ or $r_1, r_2,$ etc., or other names. Variables ranging over states are usually named $q$ or $r$, but not infrequently $q_1, q_2$, etc.\n",
+    "\n",
+    "To make this distinction more clear, consider the two statements:\n",
+    "\n",
+    "1. In DFA $M_2$ above, $q_1 = q_2$.\n",
+    "2. Let $q_1$ and $q_2$ be states such that there is a transition from $q_1$ to $q_2$ on symbol `a`.\n",
+    "\n",
+    "The first statement is false. $q_1$ and $q_2$ refer to particular states, and they are different states.\n",
+    "\n",
+    "In the second statement, $q_1$ and $q_2$ are variables ranging over states. Here, it is completely possible for $q_1=q_2$.\n",
+    "\n",
+    "This is confusing to be sure. I'll try to use the following conventions, different from the book:\n",
+    "\n",
+    "- We'll write $q_1, q_2$, etc. for particular states.\n",
+    "- We'll use $s$ (not $q_0$) for the variable that stands for the start state (i.e., a DFA is a tuple $(Q, \\Sigma, \\delta, s, F)$).\n",
+    "- We'll use $q$ and $r$ as variables that stand for states.\n",
+    "- We may also use $q_i, q_j, q_k$ to stand for states. Technically, this means that we have assigned names $q_1, q_2, \\ldots$ to the states, and are using variables $i, j, k$ to stand for state indices."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Wednesday reading\n",
     "\n",
     "Read 1.2."
