--- a/notes/week05/week05.ipynb
+++ b/notes/week05/week05.ipynb
@@ -116,9 +116,11 @@
     "\n",
     "## Pushdown automata\n",
     "\n",
-    "Pushdown automata are equipped with, in addition to the input tape, a _pushdown store_, said to have been inspired by the tray dispenser in a university dining hall.\n",
+    "Pushdown automata are equipped with, in addition to the input tape, a _pushdown store_, said to have been inspired by the tray dispenser in a university dining hall. Nowadays, a pushdown store is more commonly known as a stack, which you should be quite familiar with. Every transition can read an input symbol (or $\\varepsilon$), but it can also pop a symbol from the stack and/or push a symbol onto the stack.\n",
     "\n",
-    "Nowadays, a pushdown store is more commonly known as a stack, which you should be quite familiar with. Here's an example (2.14):"
+    "The transition labels are always of the form $$a, x \\rightarrow y$$ where $a$ is the input symbol read, $x$ is the stack symbol popped, and $y$ is the stack symbol pushed.\n",
+    "\n",
+    "Here's an example (2.14):"
    ]
   },
   {
@@ -217,6 +219,17 @@
    "source": [
     "m1 = read_csv(\"pda-m1.csv\")\n",
     "m1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The $\\varepsilon, \\varepsilon \\rightarrow \\texttt{\\$}$ transition initializes the stack to `$`. (The vast majority of PDAs that you write will start with this step.) The $0,\\varepsilon \\rightarrow 0$ transition means \"read a `0` and push a `0`.\" The $1,0\\rightarrow \\varepsilon$ transitions mean \"read a `1` and pop a `0`\". Finally, the $\\varepsilon, \\texttt{\\$} \\rightarrow \\varepsilon$ transition checks that the stack is empty (save for the bottom marker `$`) at the end of the string.\n",
+    "\n",
+    "Note that we didn't have to pop the `$` at the end; we could have left it on there or replaced it with anything, and the machine would still work the same. (There are alternative definitions of PDAs that do require that the stack be empty at the end; we never use this definition, but be careful if you consult other sources.)\n",
+    "\n",
+    "Let's look at how it works on an example string:"
    ]
   },
   {
@@ -433,7 +446,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The run graph shows both the state and the stack at each time step. The square brackets just indicate the top of the stack. Note that when the stack gets deeper, ellipses (…) are used to keep the node labels compact.\n",
+    "This graph represents all possible runs of the PDA on the string `000111`. Each node shows both the state and the stack at each time step. The stacks are shown with the top on the left. The square brackets are an artifact of how Tock words and always mark the top of the stack. Note that when the stack gets deeper, ellipses (…) are used to keep the node labels compact.\n",
     "\n",
     "This happens to be a deterministic PDA: at every time step, there's only one possibility for the next step."
    ]
