update week 6 notes

--- a/notes/week06/week06.ipynb
+++ b/notes/week06/week06.ipynb
@@ -1326,7 +1326,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def plot_height(ax, path):\n",
@@ -1542,7 +1544,26 @@
    "source": [
     "So we should add a rule $A_{q_2q_2} \\rightarrow A_{q_2q_2} A_{q_2q_2}$.\n",
     "\n",
-    "The PDA to CFG construction does this, but not for a particular string; it does this for all possible strings. The book's version generates a lot more rules than are usually necessary. Let's run the construction but remove the useless rules:"
+    "## The construction, more concisely\n",
+    "\n",
+    "The PDA to CFG construction does this, but not for a particular string; it does this for all possible strings. As mentioned above, although the construction is challenging to understand, it's quite easy to actually carry out. The only problem is that the book's version generates a lot more rules than are usually necessary. \n",
+    "\n",
+    "Before beginning, preprocess the PDA so that it has the properties listed on page 121. If we ever ask you to run this construction, we'll give you a PDA so that it already has these properties.\n",
+    "\n",
+    "1. For each pair of push/pop transitions $p \\xrightarrow{a, \\varepsilon \\rightarrow u} r$ and $s \\xrightarrow{b, u \\rightarrow \\varepsilon} q$, create the rule $A_{pq} \\rightarrow a A_{rs} b$.\n",
+    "2. For each triple of states $p, q, r$, create the rule $A_{pq} \\rightarrow A_{pr} A_{rq}$.\n",
+    "3. For each state $p$, create the rule $A_{pp} \\rightarrow \\varepsilon$.\n",
+    "\n",
+    "The start symbol is $A_{q_0,q_{\\text{accept}}}$.\n",
+    "\n",
+    "If your PDA has $n$ states, then step 2 above generates $n^3$ rules, and step 1 generates $n^4$ rules in the (rarely attained) worst case. To avoid generating so many rules, remember that a nonterminal $A_{pq}$ should only be generated if it's possible for the PDA to get from state $p$ to state $q$ starting and ending with the same stack. Any rules involving impossible nonterminals should not be created.\n",
+    "\n",
+    "For example, with the above PDA, nonterminals $A_{q_2,q_1}$, $A_{q_3,q_2}$, and $A_{q_3,q_1}$ are impossible because there aren't any paths from $q_2$ to $q_1$, etc. And $A_{q_1,q_2}$ is impossible because the only path that gets from $q_1$ to $q_2$ changes the stack, and similarly for $A_{q_2,q_3}$.\n",
+    "\n",
+    "\n",
+    "## Example construction\n",
+    "\n",
+    "Let's run the construction but remove all rules that can't be reached from the start symbol or that can't reach a string:"
    ]
   },
   {
