fix nbviewer rendering

--- a/notes/week05/week05.ipynb
+++ b/notes/week05/week05.ipynb
@@ -226,7 +226,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The $\\varepsilon, \\varepsilon \\rightarrow \\texttt{\\$}$ transition initializes the stack to `$`. (The vast majority of PDAs that you write will start with this step.) The $0,\\varepsilon \\rightarrow 0$ transition means \"read a `0` and push a `0`.\" The $1,0\\rightarrow \\varepsilon$ transitions mean \"read a `1` and pop a `0`\". Finally, the $\\varepsilon, \\texttt{\\$} \\rightarrow \\varepsilon$ transition checks that the stack is empty (save for the bottom marker `$`) at the end of the string.\n",
+    "The $\\varepsilon, \\varepsilon \\rightarrow \\texttt{\\$}$ transition initializes the stack to $\\texttt{\\$}$. (The vast majority of PDAs that you write will start with this step.) The $0,\\varepsilon \\rightarrow 0$ transition means \"read a `0` and push a `0`.\" The $1,0\\rightarrow \\varepsilon$ transitions mean \"read a `1` and pop a `0`\". Finally, the $\\varepsilon, \\texttt{\\$} \\rightarrow \\varepsilon$ transition checks that the stack is empty (save for the bottom marker `$`) at the end of the string.\n",
     "\n",
     "Note that we didn't have to pop the `$` at the end; we could have left it on there or replaced it with anything, and the machine would still work the same. (There are alternative definitions of PDAs that do require that the stack be empty at the end; we never use this definition, but be careful if you consult other sources.)\n",
     "\n",
