--- a/notes/week10/week10.ipynb
+++ b/notes/week10/week10.ipynb
@@ -41,15 +41,21 @@
     "editable": true
    },
    "source": [
-    "### Properties of runs\n",
+    "### Reducibility\n",
     "\n",
-    "The halting problem is a problem about the run of a particular machine $M$ on a particular $w$. There are lots of problems of this sort, but most have an extra wrinkle that involves creating a _third_ TM besides $R$ and $S$. Since it can be hard to keep track of them all, here's an example involving Python programs that hopefully is easier to follow.\n",
+    "In general, to show that some problem P is undecidable, you assume that P is decidable by some TM $R$ and use that to implement a universal decider $S$. That implementation usually has three steps:\n",
     "\n",
-    "Let's show that it is undecidable whether a given Python program $P$ writes to the filesystem.\n",
+    "1. Convert an input to $S$ (a pair $\\langle M, w\\rangle$) into an instance of P.\n",
+    "2. Run $R$ on the converted instance.\n",
+    "3. Interpret the result of $R$ to decide whether $M$ accepts $w$. \n",
     "\n",
-    "Suppose, for the sake of contradiction, that this is decidable. That is, there exists a TM $R$ that accepts $\\langle P\\rangle$ if and only if $P$ would write to the filesystem. Let's call it the write-detector.\n",
+    "In the reduction from $A_{\\textsf{TM}}$ to the halting problem, step 1 was trivial: $\\langle M, w \\rangle$ maps to itself. But in other cases, this step may be more complicated. \n",
     "\n",
-    "We're going to build a universal decider $S$ that somehow uses the write-detector $R$ to decide $A_{\\mathsf{TM}}$. We assume the presence of a Python function `simulate` that simulates a TM and returns `True` for accept or `False` for reject or possibly loops.\n",
+    "For example, let's show that it is undecidable whether a given Python program $P$ writes to the filesystem.\n",
+    "\n",
+    "Suppose, for the sake of contradiction, that this is decidable. That is, there exists a TM $R$ that accepts $\\langle P\\rangle$ if and only if $P$ would write to the filesystem. Let's call it the \"write-detector.\"\n",
+    "\n",
+    "We're going to build a universal decider $S$ that somehow uses the write-detector $R$ to decide $A_{\\mathsf{TM}}$. We can't possibly feed $\\langle M, w\\rangle$ to $R$ because $R$ wants a Python program. So we need to convert $M$ and $w$ into a Python program. We assume a Python function `simulate` that simulates a TM and returns `True` for accept or `False` for reject; this function can also potentially loop. It should be obvious that such a function exists, although it's long enough that we don't bother to write it out.\n",
     "\n",
     "Then $S = $ “On input $\\langle M, w\\rangle$:\n",
     "\n",
@@ -73,9 +79,39 @@
     "\n",
     "Thus $S$ decides $A_{\\mathsf{TM}}$ as desired, which is a contradiction. We conclude that it's undecidable whether a given Python program writes to the filesystem.\n",
     "\n",
-    "Hopefully, it's clear that there's a very wide variety of actions a machine/program can take that are undecidable to detect. (Your homework has one example of an action that _is_ decidable to detect, though.)\n",
-    "\n",
     "**Question.** Try Problem 5.12: Show that it is undecidable whether a Turing machine ever erases a symbol (that is, overwrites a non-blank symbol with a blank symbol)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "Sometimes, the existence of a Turing machine simulator is not so obvious, and we have to think more carefully about it.\n",
+    "\n",
+    "**Question**. An _unrestricted grammar_ is like a CFG, but the left-hand sides can be strings. A derivation starts with $S$ and continues until no more rules can be applied. Show that it is undecidable whether an unrestricted grammar generates a nonempty language. Hint: Convert $\\langle M, w\\rangle$ to a grammar whose starting rule is\n",
+    "$$ S \\rightarrow q_0 w $$\n",
+    "and for each transition of $M$, create a grammar rule (or rules) to simulate that transition.\n",
+    "\n",
+    "Some other examples of undecidable problems are:\n",
+    "\n",
+    "- Do two context-free grammars generate the same language (Exercise 5.1)?\n",
+    "- Post's Correspondence Problem (Section 5.2).\n",
+    "- Does a polynomial equation in several variables have an integral solution?\n",
+    "\n",
+    "See [the survey by Poonen](http://www-math.mit.edu/~poonen/papers/sampler.pdf) for more examples."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "## Thursday class"
    ]
   },
   {
@@ -87,9 +123,9 @@
    "source": [
     "### Properties of languages\n",
     "\n",
-    "The next two examples in the book, Theorems 5.2 and 3, are slightly different. They are not questions about a single run of a machine, but about the _entire language_ that the machine recognizes. Theorem 5.2 is about whether the language is empty; Theorem 5.3 is about whether the language is regular.\n",
+    "The next two examples in the book, Theorems 5.2 and 5.3, are slightly different. They are not questions about a single run of a machine, but about the _entire language_ that the machine recognizes. Theorem 5.2 is about whether the language is empty; Theorem 5.3 is about whether the language is regular.\n",
     "\n",
-    "The basic shape of the proof is still the same. Assume that the question is decidable, so there is a TM $R$ that decides it. As before, we need to construct a new TM $S$ that decides $A_{\\mathsf{TM}}$. As before, $S$ has to construct an \"adapter\" (called $M_1$ or $M_2$ in the book) that links the question that $S$ wants to decide (does $M$ accept $w$?) with the question that $R$ has the magic ability to answer.\n",
+    "The basic shape of the proof is still the same. Assume that the question is decidable, so there is a TM $R$ that decides it. As before, we need to construct a new TM $S$ that decides $A_{\\mathsf{TM}}$. The first that $S$ needs to do is to convert $\\langle M, w\\rangle$ to just a machine (called $M_1$ or $M_2$ in the book). We have to take care to construct this \"adapter\" machine to link the question that $S$ wants to decide (does $M$ accept $w$?) with the question that $R$ has the magic ability to answer.\n",
     "\n",
     "Let's look at Theorem 5.2 first. Given $M$ and $w$, we can construct an adapter $M_1$ that recognizes a nonempty language iff $M$ accepts $w$.\n",
     "\n",
@@ -115,41 +151,6 @@
     "- If $M$ rejects or loops on $w$, then $M_1$ would recognize $\\emptyset$, and so $S$ rejects.\n",
     "\n",
     "Thus $S$ decides $A_{\\mathsf{TM}}$ as desired, which is a contradiction. We conclude that it's undecidable whether a given Turing machine recognizes the empty language."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "The scopes of the variables involved in the above proof can be confusing, so it might or might not help to look at the TMs as Python functions:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "def is_empty(M): # This is R\n",
-    "    \"\"\"Returns True iff M recognizes \\emptyset.\"\"\"\n",
-    "    # Insert magic code here\n",
-    "\n",
-    "def accepts(M, w): # This is S\n",
-    "    def M1(x):\n",
-    "        \"\"\"Recognizes {w} if M(w) is True,\n",
-    "           recognizes \\emptyset otherwise.\"\"\"\n",
-    "        if x != w:\n",
-    "            return False\n",
-    "        else:\n",
-    "            return M(w)\n",
-    "    return not is_empty(M1)"
    ]
   },
   {
@@ -192,48 +193,9 @@
     "editable": true
    },
    "source": [
-    "It turns out that there is a general recipe for proving results of this type. This is called Rice's Theorem and is the focus of one of the homework questions.\n",
+    "It turns out that there is a general recipe for proving results of this type. This is called Rice's Theorem and is left as an exercise in the textbook.\n",
     "\n",
     "**Question.** Try proving: It is undecidable whether two given Turing machines $M_1$ and $M_2$ recognize the same language."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "### Other undecidable problems\n",
-    "\n",
-    "The examples we've looked at so far may seem a little arcane because they are all questions about Turing machines, but some other examples are:\n",
-    "\n",
-    "- Do two context-free grammars generate the same language (Exercise 5.1)?\n",
-    "- The third and hardest puzzle we did on the first day of class (Section 5.2).\n",
-    "- Does a polynomial equation in several variables have an integral solution?\n",
-    "\n",
-    "See [the survey by Poonen](http://www-math.mit.edu/~poonen/papers/sampler.pdf) for more examples."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "## Thursday class"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "Continue with examples of undecidability proofs."
    ]
   }
  ],
