update week 10 notes

--- a/notes/week10/week10.ipynb
+++ b/notes/week10/week10.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "## Monday\n",
     "\n",
-    "Read Section 5.1."
+    "Read Section 5.1. This is a difficult section, so read it carefully. But we probably won't do Theorems 5.10, 5.13 in detail."
    ]
   },
   {
@@ -31,7 +31,7 @@
     "\n",
     "The proof is not difficult but it has a weird feel to it. The first thing that you have to remember is that the direction of the reduction is the opposite of what most people intuitively think of first. If you want to show that the halting problem is undecidable, you do _not_ reduce the halting problem to $A_{\\mathsf{TM}}$. You assume that the halting problem _is_ decidable, then show via a reduction from $A_{\\mathsf{TM}}$ to the halting problem that $A_{\\mathsf{TM}}$ would also be decidable, which is a contradiction.\n",
     "\n",
-    "Recall that we designed $U$, a universal TM, that _recognizes_ $A_{\\mathsf{TM}}$, but we showed that we cannot design a TM $S$, a \"universal decider,\" that _decides_ $A_{\\mathsf{TM}}$. Practically, the sticking point is that on input $\\langle M, w\\rangle$, if $M$ loops on $w$, we have no way to detect it so that we can reject. Enter $R$, a hypothetical TM that decides the halting problem $\\mathit{HALT}_{\\mathsf{TM}}$. If we had such a machine, then designing $S$ would be easy: Use $R$ to check for looping. if a loop is detected, reject; if no loop is detected, we can safely simulate $M$ and return what it returns. But last time we showed (by diagonalization) that $S$ does not exist. Therefore, $R$ cannot exist either."
+    "Recall that we designed $U$, a universal TM, that _recognizes_ $A_{\\mathsf{TM}}$, but we showed that we cannot design a TM $S$, a \"universal decider,\" that _decides_ $A_{\\mathsf{TM}}$. Practically, the sticking point is that on input $\\langle M, w\\rangle$, if $M$ loops on $w$, we have no way to detect it so that we can reject. Enter $R$, a hypothetical TM that decides the halting problem $\\mathit{HALT}_{\\mathsf{TM}}$. If we had such a machine, then designing $S$ would be easy: use $R$ to check for looping. if a loop is detected, reject; if no loop is detected, we can safely simulate $M$ and return what it returns. But last time we showed (by diagonalization) that $S$ does not exist. Therefore, $R$ cannot exist either."
    ]
   },
   {
@@ -79,6 +79,12 @@
     "\n",
     "Thus $S$ decides $A_{\\mathsf{TM}}$ as desired, which is a contradiction. We conclude that it's undecidable whether a given Python program writes to the filesystem.\n",
     "\n",
+    "In general, when you're trying to prove that detecting property P is undecidable, this \"adapter\" usually has to do the following things:\n",
+    "- Simulate $M$ on $w$.\n",
+    "- If $M$ accepts, then exhibit property P.\n",
+    "- If $M$ rejects, then don't exhibit property P.\n",
+    "- You must also set it up so that if $M$ loops, property P is not exhibited.\n",
+    "\n",
     "**Question.** Try Problem 5.12: Show that it is undecidable whether a Turing machine ever erases a symbol (that is, overwrites a non-blank symbol with a blank symbol)."
    ]
   },
@@ -125,19 +131,20 @@
     "\n",
     "The next two examples in the book, Theorems 5.2 and 5.3, are slightly different. They are not questions about a single run of a machine, but about the _entire language_ that the machine recognizes. Theorem 5.2 is about whether the language is empty; Theorem 5.3 is about whether the language is regular.\n",
     "\n",
-    "The basic shape of the proof is still the same. Assume that the question is decidable, so there is a TM $R$ that decides it. As before, we need to construct a new TM $S$ that decides $A_{\\mathsf{TM}}$. The first that $S$ needs to do is to convert $\\langle M, w\\rangle$ to just a machine (called $M_1$ or $M_2$ in the book). We have to take care to construct this \"adapter\" machine to link the question that $S$ wants to decide (does $M$ accept $w$?) with the question that $R$ has the magic ability to answer.\n",
+    "The basic shape of the proof is still the same. Assume that the question is decidable, so there is a TM $R$ that decides it. As before, we need to construct a new TM $S$ that decides $A_{\\mathsf{TM}}$. The first thing that $S$ needs to do is to convert $\\langle M, w\\rangle$ to just a machine (called $M_1$ or $M_2$ in the book). We have to take care to construct this \"adapter\" machine to link the question that $S$ wants to decide (does $M$ accept $w$?) with the question that $R$ has the magic ability to answer.\n",
     "\n",
-    "Let's look at Theorem 5.2 first. Given $M$ and $w$, we can construct an adapter $M_1$ that recognizes a nonempty language iff $M$ accepts $w$.\n",
+    "Let's look at Theorem 5.2 first. Given $M$ and $w$, we can construct an adapter $M_1$ that recognizes a nonempty language iff $M$ accepts $w$. We're going to construct $M_1$ differently from the book; if you like the book's version better, that's fine too.\n",
     "\n",
     "$M_1 =$ “On input $x$:\n",
     "\n",
-    "1. If $x \\neq w$, _reject_.\n",
-    "2. Otherwise, run $M$ on input $w$ and _accept_ if $M$ does.\n",
+    "1. Run $M$ on input $w$.\n",
+    "2. If $M$ accepts $w$, then _accept_ $x$.\n",
+    "3. If $M$ rejects $w$, then _reject_ $x$.\n",
     "\n",
     "Let's think carefully about what $M_1$ would do.\n",
-    "- If $M$ accepts $w$, then $M_1$ also accepts $w$ but rejects all $x \\neq w$. That is, $M_1$ recognizes $\\{w\\}$, a nonempty language.\n",
-    "- If $M$ rejects $w$, then $M_1$ rejects both $w$ and all $x \\neq w$. That is, $M_1$ recognizes $\\emptyset$.\n",
-    "- If $M$ loops on $w$, then $M_1$ also loops on $w$ and rejects all $x \\neq w$. So, $M_1$ recognizes $\\emptyset$.\n",
+    "- If $M$ accepts $w$, then $M_1$ accepts all strings $x$. That is, $M_1$ recognizes $\\Sigma^\\ast$, a nonempty language.\n",
+    "- If $M$ rejects $w$, then $M_1$ rejects all strings $x$. That is, $M_1$ recognizes $\\emptyset$.\n",
+    "- If $M$ loops on $w$, then $M_1$ also loops on all strings $x$. So, $M_1$ recognizes $\\emptyset$.\n",
     "\n",
     "Finally, we define a universal decider $S =$ “On input $\\langle M, w\\rangle$:\n",
     "\n",
@@ -160,30 +167,38 @@
     "editable": true
    },
    "source": [
-    "The proof of Theorem 5.3 (regularity) is quite similar. Given $M$ and $w$, we can construct an adapter $M_2$ that recognizes a regular language iff $M$ accepts $w$.\n",
+    "The proof of Theorem 5.3 (regularity) is quite similar. Given $M$ and $w$, we can construct an adapter $M_2$ that recognizes a regular language iff $M$ accepts $w$. Again, we'll do this a little differently from the book.\n",
     "\n",
     "$M_2 =$ “On input $x$:\n",
     "\n",
-    "1. If $x$ has the form $\\mathtt{0}^n\\mathtt{1}^n$, _accept_.\n",
-    "2. Otherwise, run $M$ on input $w$ and _accept_ if $M$ does.\n",
+    "1. Run $M$ on input $w$.\n",
+    "2. If $M$ accepts $w$, and $x$ has the form $\\mathtt{0}^n\\mathtt{1}^n$, _accept_ $x$.\n",
+    "3. Otherwise, _reject_ $x$.\n",
     "\n",
     "Let's think carefully about what $M_2$ does.\n",
-    "- If $M$ accepts $w$, then $M_2$ accepts all strings whether or not they are of the form $\\mathtt{0}^n\\mathtt{1}^n$. That is, it recognizes $\\Sigma^\\ast$, a regular language.\n",
-    "- If $M$ rejects $w$, then $M_2$ accepts just strings of the form $\\mathtt{0}^n\\mathtt{1}^n$ and rejects all others. That is, it recognizes $\\{\\mathtt{0}^n \\mathtt{1}^n \\mid n \\geq 0\\}$, a non-regular language.\n",
-    "- If $M$ loops on $w$, then $M_2$ accepts just strings of the form $\\mathtt{0}^n\\mathtt{1}^n$ and loops on all others. That is, it recognizes $\\{\\mathtt{0}^n \\mathtt{1}^n \\mid n \\geq 0\\}$, a non-regular language.\n",
+    "- If $M$ accepts $w$, then $M_2$ accepts strings $x$ of the form $\\mathtt{0}^n\\mathtt{1}^n$. So it recognizes a non-regular language.\n",
+    "- If $M$ rejects $w$, then $M_2$ rejects all strings $x$. So it recognizes $\\emptyset$, a regular language.\n",
+    "- If $M$ loops on $w$, then $M_2$ also loops on all strings $x$. So it recognizes $\\emptyset$, a regular language.\n",
     "\n",
     "The rest of the proof is very similar to the last one. We define a universal decider $S =$ “On input $\\langle M, w\\rangle$:\n",
     "\n",
     "1. Construct $M_2$ as described above.\n",
     "2. Run $R$, the regularity-detector, on $M_2$.\n",
-    "3. If $R$ detected a regular language, _accept_.\n",
-    "4. Otherwise, _reject_.\n",
+    "3. If $R$ detected a regular language, _reject_.\n",
+    "4. Otherwise, _accept_.\n",
     "\n",
     "Here's how $S$ works:\n",
-    "- If $M$ accepts $w$, then $M_2$ would recognize $\\Sigma^\\ast$, a regular language, and so $S$ accepts.\n",
-    "- If $M$ rejects or loops on $w$, then $M_2$ would recognize $\\{\\mathtt{0}^n \\mathtt{1}^n \\mid n \\geq 0\\}$, a non-regular language, and so $S$ rejects.\n",
+    "- If $M$ accepts $w$, then $M_2$ would recognize $\\{\\mathtt{0}^n\\mathtt{1}^n\\}$, a non-regular language, and so $S$ accepts.\n",
+    "- If $M$ rejects or loops on $w$, then $M_2$ would recognize $\\emptyset$, a regular language, and so $S$ rejects.\n",
     "\n",
     "Thus $S$ decides $A_{\\mathsf{TM}}$ as desired, which is a contradiction. We conclude that it's undecidable whether a given Turing machine recognizes a regular language."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question.** Try proving: It is undecidable whether two given Turing machines $M_1$ and $M_2$ recognize the same language."
    ]
   },
   {
@@ -193,9 +208,9 @@
     "editable": true
    },
    "source": [
-    "It turns out that there is a general recipe for proving results of this type. This is called Rice's Theorem and is left as an exercise in the textbook.\n",
+    "We've tried to follow a general recipe for proving undecidability results. It turns out that this recipe can be distilled into a catch-all theorem called Rice's Theorem: any property of a language recognized by a Turing machine, as long as the property is not always true or always false, is undecidable.\n",
     "\n",
-    "**Question.** Try proving: It is undecidable whether two given Turing machines $M_1$ and $M_2$ recognize the same language."
+    "There are some properties of the internal working of a Turing machine that are decidable (you'll see one in HW7). But broadly speaking, questions about behaviors of computer programs tend to be undecidable. When you see problems like this in real life -- and you definitely will -- you should smell undecidability and think twice before trying to implement a solution to the problem."
    ]
   }
  ],
